feat: 优先使用html格式的邮件

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "dev": "wrangler dev",
+    "dev": "wrangler dev index.js",
     "build": "esbuild index.js --bundle --outfile=build/index.js --format=esm",
     "pub": "wrangler deploy",
     "dep": "npm run build && npm run pub"
