feat: parse mail

--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "gmail2telegram",
+  "name": "parse-mail",
   "version": "1.0.0",
   "main": "index.js",
   "type": "module",
   "scripts": {
     "dev": "wrangler dev index.js",
-    "build": "esbuild index.js --bundle --outfile=build/index.js --format=esm",
+    "build": "esbuild index.js --bundle --outfile=build/index.js --format=esm --minify",
     "pub": "wrangler deploy",
     "dep": "npm run build && npm run pub"
   },
